client-reactjs/src/index.css
/* ... */
.formInModal *{
  text-align: left;
}

.dataflow-tbl-controls i {
  padding: 2px;
  position: relative;
  z-index: 99;
}

.fa-exclamation-triangle {
  color: red;
}

.messages-span li {
  list-style-type: none;
}

.hide-column {
  display: none;
}

.show-column {
  display: block;
}

.overflow-hidden > * {
  overflow: hidden;
}

td.ant-table-row-cell-ellipsis::after {
  content: "...";
  position: absolute;
  bottom: 16px;
}

div.tooltip {
  position: absolute;
  text-align: left;
  text-decoration: none;
  width: auto;
  height: 28px;
  min-width: 30px;
  min-height: 32px;
  padding: 6px 8px;
  background: rgba(0, 0, 0, 0.75);
  border-radius: 4px;
  pointer-events: none;
  color: #fff;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
  webkit-box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
  word-wrap: break-word;
}

.layout_tbl .ant-table-tbody > tr > td {
  padding: 2px 2px;
}

.layout_tbl .ant-upload {
  padding: 5px;
}

.layout_tbl .editable-cell-value-wrap {
  padding: 0px;
}

.dropdown .submenu li {
  display: block;
  padding-left: 15px;
}

.dropdown .submenu li a {
  display: block;
  white-space: nowrap;
  text-decoration: none;
}

.editable-cell {
  position: relative;
}

.editable-cell-value-wrap {
  padding: 5px 12px;
  cursor: pointer;
}

.editable-row:hover .editable-cell-value-wrap {
  border: 1px solid #d9d9d9;
  border-radius: 4px;
  padding: 4px 11px;
}

.error {
  color: #f5222d;
}

.login-form-registration {
  width: 540px;
  margin: 140px auto;
}

.help-block {
  color: red;
}

.ant-input[disabled] {
  color: #696969;
  background-color: #f5f5f5;
  cursor: not-allowed;
  opacity: 1;
}

.graph-edit-mode {
  /*margin-left: 115px;*/
  z-index: 1;
  /*border: 1px solid #17a2b8*/
}

.graph-view-mode {
  height: 60vh;
}

.forgot-form {
  width: 340px;
  margin: 140px auto;
}

.button-container {
  align-self: flex-end;
  float: right;
  padding: 5px;
}

.button-container .ant-btn {
  margin-right: 8px;
}

.right-menu a {
  color: black !important;
}

.self-right-menu {
  position: absolute;
  z-index: 1;
}

.groups-div {
  height: calc(100% - 150px);
  min-width: 200px;
  resize: horizontal;
  overflow: auto;
}

.asset-table {
  min-width: 200px;
  flex: 6;
}

.drag-handle {
  cursor: move !important;
}

.group-options {
  width: 70%;
  overflow-wrap: anywhere;
  display: inline-flex;
}

.group-title .fa-bars {
  display: none;
}

.ant-tree-node-content-wrapper:hover i.fa-bars {
  display: block;
}

.group-title i {
  display: inline-block;
  float: right;
  line-height: 18px;
}

.ant-tree-node-content-wrapper {
  width: 200px;
  margin-right: 20px !important;
}

.ant-tree-title li {
  display: inline;
  line-height: 18px;
}

.noGutters .codemirror_MarkdownEditor .CodeMirror-sizer {
  margin-left: 0 !important;
}

.noGutters .codemirror_MarkdownEditor .CodeMirror-gutters,
.noGutters .codemirror_MarkdownEditor .CodeMirror-linenumber {
  display: none;
}

.ant-tree-switcher {
  position: relative;
  -ms-flex: none;
  flex: none;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 5px;
  margin: 0;
  line-height: 24px;
  text-align: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.groups-tree-search-value {
  color: #f50;
}

.select-before {
  width: 65px;
}

.search-filter {
  width: 120px !important;
}

.search-options-icon {
  padding-left: 7px;
}

.group-name {
  display: block;
  font-size: 11px;
}

.asset-name i {
  padding-right: 5px;
  display: inline;
}

.asset-action-icon {
  color: var(--primary);
  cursor: "pointer";
}

.ant-tree-list {
  padding-top: 5px;
}

.graph-loading {
  padding-left: 45%;
  padding-top: 330px;
  position: absolute;
}

.graph-btns-container {
  float: right;
  position: absolute;
  padding-top: 3px;
}

.graph-btns-container button {
  margin: 5px;
}

.dropdown-btn > .ant-dropdown-trigger {
  border: none;
}

.dropdown-btn > .ant-dropdown-trigger > span {
  background-color: white !important;
}

.refresh-btn {
  border: none;
  vertical-align: middle;
}

.refresh-btn > span {
  background-color: white !important;
}

.graph-overlay {
  width: 100%;
  height: 100%;
  position: fixed;
  left: 0px;
  top: 0px;
  background-color: #000;
  opacity: 0.25;
  z-index: 10;
}

.graph-icon {
  cursor: pointer;
}

.graph-div {
  position: relative;
}

/* Read only view for asset details  */
.read-only-input {
  background: white !important;
  border: none;
  pointer-events: none;
  resize: none;
  height: auto;
  width: 100%;
  padding-left: 0;
}

.read-only-textarea {
  width: 100%;
  height: auto;
  resize: none;
  border: none;
  pointer-events: none;
  padding-top: 5px;
  overflow: hidden;
}

.read-only-input::placeholder {
  display: none;
  color: transparent;
}

.read-only-markdown {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 5px 0px 0px 0px;

}
ReactMarkdown *{
  text-align: left !important;
}

.read-only-markdown > * {
  text-align: left;
}

.read-only-markdown > h1,
h2,
h3,
h4,
h5,
h6 {
  font-size: 1.5em !important;
}
.ant-tree .ant-tree-node-content-wrapper .ant-tree-iconEle {
  display: inline-block;
  width: 24px;
  height: 24px;
  line-height: 18px !important;
  text-align: center;
  vertical-align: top;
}

.drop-target {
  border: 2px dotted gray !important;
  padding-left: 5px !important;
}

.ant-tree-drop-indicator {
  display: none !important;
}

.ant-tree .ant-tree-treenode.drop-container > [draggable] {
  -webkit-box-shadow: 0 0 0 0px;
  box-shadow: 0 0 0 0px;
}

.backLink {
  color: var(--dark);
}
.backLink:hover {
  color: var(--primary);
  text-decoration: none;
  font-weight: 500;
}

.directorytree-rightclick-menuitem {
  display: flex;
  place-items: center;
}

.ant-modal-header {
  background: var(--light);
}
.ant-modal-title {
  color: var(--dark);
}
.ant-modal-close-x {
  color: var(--dark);
}
/* ... */

